# pomaar

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
pomaar/: __init__.py  dataset.py  features.py  plots.py
pomaar/modeling/: predict.py  train.py
reports/literature-review/: frontmatter.tex  main.tex  references.biblatex
reports/literature-review/chapters/: 01_introduction.tex  02_polarimetry.tex  03_antennas.tex  04_topologies.tex  05_processing.tex  06_calibration.tex  07_challenges.tex  08_summary.tex
src/pomaar/: __init__.py  array_synthesizer.py  config.py  dsp.py  mimo_designer.py  plots.py
