[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pomaar"
version = "0.0.1"
description = "POMAAR (Polarimetric MIMO Arrays for Automotive Radars) is focused on the development of polarimetric MIMO arrays for advanced driver-assistance systems. This interdisciplinary research involves solving fundamental challenges in automotive radar, including the development of new theory and calibration procedures to enhance the classification of vulnerable road users."
authors = [
  { name = "Martin Simak" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["pomaar"]
include = ["pyproject.toml", "pomaar/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["pomaar"]
force-sort-within-sections = true

