[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pomaar"
version = "0.1.0"
description = "Polarimetric MIMO Arrays for Automotive Radars"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Martin Simak" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "xarray>=2023.10",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
doc = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pomaar"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"] # Pyflakes, pycodestyle, Isort, Naming
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pomaar"]
force-sort-within-sections = true
